<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/R">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b1"
        android:id="@+id/button"
        android:onClick="ClickBoton"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button14"
        android:layout_toStartOf="@+id/button14"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b2"
        android:id="@+id/button2"
        android:onClick="ClickBoton"
        android:layout_alignTop="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b3"
        android:id="@+id/button3"
        android:onClick="ClickBoton"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b4"
        android:id="@+id/button4"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b5"
        android:id="@+id/button5"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button2"
        android:layout_toLeftOf="@+id/button3"
        android:layout_toStartOf="@+id/button3"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b6"
        android:id="@+id/button6"
        android:onClick="ClickBoton"
        android:layout_alignTop="@+id/button5"
        android:layout_toRightOf="@+id/button2"
        android:layout_toEndOf="@+id/button2"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b7"
        android:id="@+id/button7"
        android:onClick="ClickBoton"
        android:layout_above="@+id/button11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b8"
        android:id="@+id/button8"
        android:onClick="ClickBoton"
        android:layout_above="@+id/button11"
        android:layout_toLeftOf="@+id/button9"
        android:layout_toStartOf="@+id/button9"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b9"
        android:id="@+id/button9"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b10"
        android:id="@+id/button10"
        android:onClick="ClickBoton"
        android:layout_alignTop="@+id/button11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b11"
        android:id="@+id/button11"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button9"
        android:layout_toLeftOf="@+id/button9"
        android:layout_toStartOf="@+id/button9"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b12"
        android:id="@+id/button12"
        android:onClick="ClickBoton"
        android:layout_alignTop="@+id/button11"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b13"
        android:id="@+id/button13"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b14"
        android:id="@+id/button14"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button10"
        android:layout_toRightOf="@+id/button10"
        android:layout_toEndOf="@+id/button10"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b15"
        android:id="@+id/button15"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button11"
        android:layout_toRightOf="@+id/button11"
        android:layout_toEndOf="@+id/button11"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b16"
        android:id="@+id/button16"
        android:onClick="ClickBoton"
        android:layout_below="@+id/button13"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/botonshape"
        android:textColor="#FF0011"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toca_carta"
        android:id="@+id/button17"
        android:onClick="ClickBoton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
